--- a/Company-Dashboard/src/components/sidebar/sidebar.scss
+++ b/Company-Dashboard/src/components/sidebar/sidebar.scss
@@ -6,7 +6,9 @@
       background: #000;
       // background: #06ddd2;
       color: #000;
-      height: 100vh;
+      height: 96vh;
+      border-radius: 20px;
+      margin: 1rem;
       width: 200px;
       align-items: center;
       display: flex;
