--- a/Company-Dashboard/src/Company-Dashboard/profile/companyProfile.scss
+++ b/Company-Dashboard/src/Company-Dashboard/profile/companyProfile.scss
@@ -1,3 +1,12 @@
 .CompanyProfile {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    .box {
+        margin: 1rem;
+        width: 100%;
+        height: 96vh;
+        background: #fff;
+        border-radius: 20px;
+    }
 }
