--- a/Company-Dashboard/src/components/sidebar/sidebar.scss
+++ b/Company-Dashboard/src/components/sidebar/sidebar.scss
@@ -2,6 +2,10 @@
     display: flex;
     position: sticky;
     top: 0;
+    main {
+      width: 100%;
+      height: 100%;
+    }
     .container {
       background: #000;
       // background: #06ddd2;
